name:              confroom
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings                    
                     Settings.StaticFiles
                     Settings.Development
                     CommonWidget
                     Handler.DBOperation
                     Handler.Home
                     Handler.Utils
                     Handler.MiscTypes
                     Handler.DayBookingStatus
                     Handler.Room
                     Handler.User
                     Handler.Manage
                     Handler.Booking
                     Handler.UserBookingManage
                     Handler.UserProfileManage

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                FlexibleInstances

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-sqlite             >= 2.0        && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , time                          >= 1.4.0.1
                 , smtp-mail                     >= 0.1.4.5
                 , containers                    >= 0.5.0.0
                 , old-locale                    >= 1.0.0.5
                 , wai                           >= 3.0.2
                 , resourcet                     >= 1.1.2.3
                 , conduit-extra                 >= 1.1.4
                 , vector                        >= 0.10.0.1
                 , unordered-containers          >= 0.2.3.0
                 , http-types                    >= 0.8.5
    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         confroom
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , confroom
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    build-depends: base
                 , confroom
                 , yesod-test >= 1.4 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
